# rust-and-angular.js-todo-list

./: COOLIFY_DEPLOY.md  docker-compose.yml
backend/: .dockerignore  .env  .env.example  .gitignore  API_USAGE.md  Cargo.toml  Dockerfile
backend/data/: todos.db
backend/src/: handlers.rs  main.rs  routes.rs
backend/src/db/: database.rs
backend/src/handlers/: todo_handlers.rs
backend/src/models/: todo.rs
backend/src/routes/: todo_routes.rs
frontend/: .dockerignore  .gitignore  Dockerfile  angular.json  nginx.conf  nixpacks.toml  package-lock.json  package.json
frontend/scripts/: inject-env.js  runtime-env.js
frontend/src/: index.html  styles.css
frontend/src/app/: app.css  app.html  app.ts
frontend/src/app/components/todo-form/: todo-form.css  todo-form.html  todo-form.spec.ts  todo-form.ts
frontend/src/app/components/todo-item/: todo-item.css  todo-item.html  todo-item.ts
frontend/src/app/components/todo-list/: todo-list.css  todo-list.html  todo-list.ts
frontend/src/app/models/: todo.model.ts
frontend/src/app/services/: todo.ts
